[project]
name = "maskregistration"
version = "0.2.0"
description = "Medical image registration tool for aligning segmentation masks"
authors = [
    {name = "Ludger Radke", email = "113907719+ludgerradke@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "natsort>=8.4.0",
    "nibabel>=5.1.0",
    "numpy>=1.25.0",
    "pydicom>=2.4.1",
    "simpleitk>=2.2.1",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=3.2.0",
]

[project.scripts]
maskregistration = "MaskRegistration.MaskRegistration:main"
maskregistration-web = "MaskRegistration.web.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/MaskRegistration"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
